[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Other/Range_Bullet.gd" type="Script" id=1]
[ext_resource path="res://Audio/bulletFired.mp3" type="AudioStream" id=2]

[sub_resource type="PhysicsMaterial" id=5]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.0052, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 1.0
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 55.0
damping_random = 0.2
angle = 720.0
angle_random = 1.0
scale = 8.0
scale_random = 0.5
scale_curve = SubResource( 4 )
color = Color( 0.52549, 0.188235, 0.0901961, 1 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), -3.21531, 3.18182, 0, 0, Vector2( 0.580952, 0.809091 ), 0.218182, 0.218182, 0, 0, Vector2( 1, 0 ), -6.10908, -0.166008, 0, 0 ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.24812, 0.834586, 0.992481 )
colors = PoolColorArray( 0.492188, 0.0730591, 0.0730591, 0, 0.52549, 0.188235, 0.0901961, 0.662745, 0.52549, 0.182016, 0.0901961, 0.407843, 0.421875, 0.103653, 0.0411987, 0 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.52549, 0.188235, 0.0901961, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Polygon2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.52549, 0.188235, 0.0901961, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygon2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}

[node name="Range_Bullet" type="RigidBody2D"]
z_index = -1
collision_layer = 406847488
collision_mask = 406847488
physics_material_override = SubResource( 5 )
gravity_scale = 0.5
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
rotation = 0.785398
scale = Vector2( 1.5, 1.5 )
polygon = PoolVector2Array( 0, 9.8995, -10, 10, -9.8995, 0, 10, -10 )

[node name="Polygon2D" type="Polygon2D" parent="."]
modulate = Color( 0.52549, 0.188235, 0.0901961, 1 )
rotation = 0.785398
scale = Vector2( 1.5, 1.5 )
z_index = -1
polygon = PoolVector2Array( 0, 9.8995, -10, 10, -9.8995, 0, 10, -10 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -2, 0 )
scale = Vector2( 2, 2 )
emitting = false
amount = 9
lifetime = 2.0
fixed_fps = 60
visibility_rect = Rect2( -500, -500, 1000, 1000 )
local_coords = false
process_material = SubResource( 2 )

[node name="Bullet_Trail" type="Line2D" parent="."]
light_mask = 524290
z_index = -2
width = 8.0
width_curve = SubResource( 6 )
default_color = Color( 0.52549, 0.188235, 0.0901961, 1 )
gradient = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 50, 50 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
freeze_bodies = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
autoplay = true
area_mask = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/spawn = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
